Converted password from String to byte array.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/branches/1.2@833 04c32f3d-caf7-0310-9fe0-d49f5cee804d